<resources>
    <string name="app_name">蜗牛顾家</string>
    <string name="express_number_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890-</string>

    <!--下划线-->
    <string name="user_deal"><u>《蜗牛顾家用户协议》</u></string>
    <string name="user_clause"><u>《蜗牛顾家用户使用条款》</u></string>
    <string name="addressee_datetime"><u>20170201  13:60</u></string>
    <string name="send_cases_yh"><u>点击充值，有更多优惠</u></string>
    <string name="collecting_service"><u>蜗牛顾家服务协议</u></string>
    <string name="scan">扫一扫</string>
    <string name="message">信息</string>
    <string name="accept">收件</string>
    <string name="send">寄件</string>
    <string name="shopping">购物</string>
    <string name="collection">代付</string>
    <string name="check_package_and_win_prize">登录查包裹，还能赢奖品！</string>
    <string name="login">登录</string>
    <string name="enter_phone_number">请输入您的手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="login_to_agree">登录即为同意</string>
    <string name="register">注册</string>
    <string name="you_have_read_and_agreed">您已阅读并同意</string>
    <string name="next_step">下一步</string>
    <string name="fill_in_check_code">填写校验码</string>
    <string name="personal_information_maintenance">个人信息维护</string>
    <string name="name">姓名</string>
    <string name="import_name">请输入名字</string>
    <string name="usual_address">常用地址</string>
    <string name="finish">完成</string>
    <string name="new_address">新增地址</string>
    <string name="ordinary_address">普通地址</string>
    <string name="region">地区</string>
    <string name="please_select">请选择</string>
    <string name="village_name">小区名</string>
    <string name="house_number">门牌号</string>
    <string name="if_employ_electronic_package_box">是否使用蜗牛电子包裹箱</string>
    <string name="system_allocates_electronic_package_box">系统为您分配的蜗牛电子包裹箱为：</string>
    <string name="manual_customization_electronic_package_box">您也可以手动定制专属蜗牛电子包裹箱：</string>
    <string name="manual_customization">手动定制</string>
    <string name="use_confidential">使用电子包裹箱可以在包裹上隐去您的门牌号，让您的个人信息更加保密。</string>
    <string name="mobile">手机号</string>
    <string name="import_mobile">请输入手机号</string>
    <string name="chelsea">所在地区</string>
    <string name="select_area">请选择所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="import_detailed_address">请输入详细地址</string>
    <string name="newly_increased">新增</string>
    <string name="home">首页</string>
    <string name="expectative">期待中...</string>
    <string name="my">我的</string>
    <string name="search">请输入快递单号</string>
    <string name="write_off">注销</string>
    <string name="personal_address">个人地址</string>
    <string name="voucher">代金券</string>
    <string name="my_account">我的账户</string>
    <string name="my_vip">我的VIP</string>
    <string name="faq">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="current_version">当前版本</string>
    <string name="immediately_renewal">立即续费</string>
    <string name="sweep_user_code">用户扫码</string>
    <string name="carrier_source">承运来源：</string>
    <string name="tracking_number">快递单号：</string>
    <string name="package_details">包裹详情</string>
    <string name="promptly_send">立即送</string>
    <string name="appointment_send">预约送</string>
    <string name="confirm_receive">确认接收</string>
    <string name="like_send">我要寄件</string>
    <string name="select_snail_address">请选择蜗牛站地址</string>
    <string name="sender">寄件人</string>
    <string name="add_sender">请添加寄件人</string>
    <string name="directory_inquiries">地址簿</string>
    <string name="where_to_send">寄到哪里</string>
    <string name="add_recipient">请添加收件人</string>
    <string name="stdmode">物品类型</string>
    <string name="select_stdmode">请选择物品类型</string>
    <string name="delivery_way">投递方式</string>
    <string name="select_delivery_way">请选择投递方式</string>
    <string name="carrier_company">承运公司</string>
    <string name="select_carrier_company">请选择承运公司</string>
    <string name="card_no">身份证号码</string>
    <string name="import_card_no">请输入身份证号码</string>
    <string name="card_no_real_ame_authentication">邮寄包裹时需要有效的身份证号码，快递实名制</string>
    <string name="confirm_message">确认信息</string>
    <string name="fill_in">填写收件人</string>
    <string name="confirm">确定</string>
    <string name="save_recipient_to_address_book">保存该收件人到地址簿</string>
    <string name="chat">聊天</string>
    <string name="immediately_take">立即取</string>
    <string name="booking">预约取</string>
    <string name="send_details">寄件详情</string>
    <string name="set_time_for_mailing">设置寄件时间</string>
    <string name="payment">支付</string>
    <string name="send_order">寄件订单</string>
    <string name="take_picture">拍照</string>
    <string name="album_selection">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="set_expiry_date_for_package">请设定包裹保管到期时间</string>
    <string name="select_time">请选择时间</string>
    <string name="affirm">确定</string>
    <string name="go_back">返回</string>
    <string name="notarize">确认</string>
    <string name="return_reason">退回原因</string>
    <string name="would_you_confirm_that_package_is_delayed">请确认是否延期包裹？</string>
    <string name="delay_reason">延期原因</string>
    <string name="expected_delay">预计延期天数</string>
    <string name="payment_method">支付方式为：</string>
    <string name="recharge">充值</string>
    <string name="balance_payment">余额支付</string>
    <string name="alipay">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="actual_payment_amount">实际支付金额为：</string>
    <string name="settle_accounts">结算</string>
    <string name="system_prompt">系统提示</string>
    <string name="apply_pay">申请到付</string>
    <string name="receive_delivery">收快递</string>
    <string name="paid_amount">代付金额：</string>
    <string name="enter_amount">请输入金额</string>
    <string name="running_errands_fee">跑腿费：</string>
    <string name="additional_payment_goods">新增代付货款</string>
    <string name="snail_can_stand_you_paid_cod_package">蜗牛站可以为您代付“货到付款”的包裹</string>
    <string name="enter_payment_in_cash_on_delivery_parcel_courier_number">请输入货到付款的包裹的快递单号</string>
    <string name="recipients">收件人</string>
    <string name="move_and_scale">移动和缩放</string>
    <string name="choose">选取</string>
    <string name="my_recharge">我要充值</string>
    <string name="enter_top_up_amount">请输入充值金额</string>
    <string name="enter_top_up_withdrawals">请输入提现金额</string>
    <string name="payment_mode">支付方式</string>
    <string name="wechat_payment">微信支付</string>
    <string name="ali_pay_payment">支付宝支付</string>
    <string name="withdraw">提现</string>
    <string name="balance_withdraw">余额提现</string>
    <string name="electorn_parcel_3">您定制的电子包裹编号为：</string>
    <string name="electorn_parcel_2">电子包裹箱编号（四位以上数字）</string>
    <string name="electorn_parcel_1">请设定您的定制电子包裹邮箱编号</string>
    <string name="camera">相册</string>
    <string name="open_flashlight">打开照明灯</string>
    <string name="close_flashlight">关闭照明灯</string>
    <string name="today_deal">今日特价</string>
    <string name="more">更多</string>
    <string name="logistics_information">物流信息</string>
    <string name="all_goods">所有商品</string>
    <string name="offline_shopping">线下购</string>
    <string name="go_accounts">去结算</string>
    <string name="zero">0.00</string>
    <string name="delivery_fee_zero">配送费：0.00</string>
    <string name="clear_shopping">清空购物车</string>
    <string name="shopcart">购物车</string>
    <string name="seach_tv">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_history_record">清空历史记录</string>
    <string name="input_commodity_name">请输入商品名称</string>
    <string name="comprehensive">综合</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="details">详情</string>
    <string name="place_order">提交订单</string>
    <string name="modify">修改</string>
    <string name="go_payment">去付款</string>
    <string name="select_delivery_mode">请选择送货方式</string>
    <string name="member_discount">会员折扣</string>
    <string name="freight">运费</string>
    <string name="total_amount">合计金额：</string>
    <string name="payment_order">支付订单</string>
    <string name="order_amount">订单金额：</string>
    <string name="payment_alipay">支付宝支付</string>
    <string name="payment_wechat">微信支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="logisitics_deatails">物流详情</string>
    <string name="input_number">输入编号</string>
    <string name="enter_commodity_number">请输入商品编号</string>
    <string name="the_library">出库</string>
    <string name="confirm_order">确认订单</string>
    <string name="successful_payment">支付成功</string>
    <string name="my_order">我的订单</string>
    <string name="buy_online">网上购</string>
    <string name="go_pay">去支付</string>
    <string name="delete_order_btn">删除订单</string>
    <string name="completed">已完成</string>
    <string name="welcome_to_use_again_sanil">订单已完成，欢迎再次使用蜗牛顾家</string>
    <string name="paid">实付</string>
    <string name="sweep_shopping">扫码购物</string>
    <string name="open_shopping">开启购物</string>
    <string name="online_payment">在线支付</string>
    <string name="two_dimensional_code">获得二维码</string>
    <string name="two_dimensional_code_p">凭二维码</string>
    <string name="complete_shopping">完成购物</string>
    <string name="select_site">选择站点</string>
    <string name="enter_your_name_site_address">请输入站在名称/站点地址</string>
    <string name="nearest_me">离我最近</string>
    <string name="other_sites">其他站点</string>
    <string name="store_confirmation">门店确认</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="manual_input">手动输入</string>
</resources>
