<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_450"
        android:background="@drawable/dialog_bg_shape"
        android:layout_width="@dimen/px_656"
        android:layout_height="@dimen/px_520">
        <TextView
            android:layout_marginTop="@dimen/px_30"
            android:text="@string/delay_reason"
            android:textSize="@dimen/px_30"
            android:textColor="@color/cl_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.example.ysww.snailfamily.custom.XCDropDownListView
            android:layout_marginTop="@dimen/px_15"
            android:id="@+id/drop_down_list_view"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/px_30"
            android:layout_height="@dimen/px_80"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_marginTop="@dimen/px_25"
            android:text="@string/expected_delay"
            android:textSize="@dimen/px_30"
            android:textColor="@color/cl_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/cl_333333"
            android:textSize="@dimen/px_30"
            android:gravity="center_vertical"
            android:text="asfd"
            android:paddingLeft="@dimen/px_20"
            android:id="@+id/date"
            android:background="@drawable/drop_time_box_icon"
            android:layout_marginTop="@dimen/px_15"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/px_30"
            android:layout_height="@dimen/px_79"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_marginTop="@dimen/px_25"
            android:text="@string/would_you_confirm_that_package_is_delayed"
            android:textSize="@dimen/px_30"
            android:textColor="@color/cl_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="@dimen/px_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:gravity="center"
                android:text="@string/go_back"
                android:textColor="@color/cl_333333"
                android:textSize="@dimen/px_32"
                android:id="@+id/return_btn"
                android:background="@drawable/button_return_shape"
                android:layout_width="@dimen/px_220"
                android:layout_height="@dimen/px_80" />
            <Button
                android:layout_marginRight="@dimen/px_30"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/notarize"
                android:textColor="@color/white"
                android:textSize="@dimen/px_32"
                android:id="@+id/affirm_btn"
                android:background="@drawable/button_affirm_shape"
                android:layout_width="@dimen/px_220"
                android:layout_height="@dimen/px_80" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>