<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_400"
        android:layout_marginTop="@dimen/px_160"
        android:background="@drawable/dialog_bg_shape"
        android:paddingLeft="@dimen/px_30">


        <TextView
            android:id="@+id/thyx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_30"
            android:text="@string/return_reason"
            android:textColor="@color/cl_333333"
            android:textSize="@dimen/px_30" />

        <com.example.ysww.snailfamily.custom.XCDropDownListView
            android:id="@+id/drop_down_list_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_80"
            android:layout_below="@id/thyx"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/px_30"
            android:layout_marginTop="@dimen/px_25" />
        <TextView
            android:layout_below="@+id/drop_down_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_30"
            android:text="@string/would_you_confirm_that_package_is_delayed"
            android:textColor="@color/cl_333333"
            android:textSize="@dimen/px_30" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/px_40">

            <Button
                android:id="@+id/return_btn"
                android:layout_width="@dimen/px_220"
                android:layout_height="@dimen/px_80"
                android:background="@drawable/button_return_shape"
                android:gravity="center"
                android:text="@string/go_back"
                android:textColor="@color/cl_333333"
                android:textSize="@dimen/px_32" />

            <Button
                android:id="@+id/affirm_btn"
                android:layout_width="@dimen/px_220"
                android:layout_height="@dimen/px_80"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/px_30"
                android:background="@drawable/button_affirm_shape"
                android:gravity="center"
                android:text="@string/notarize"
                android:textColor="@color/white"
                android:textSize="@dimen/px_32" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>