<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">
    <RelativeLayout
        android:id="@+id/title"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_96">
        <ImageView
            android:padding="@dimen/px_20"
            android:id="@+id/return_arrows"
            android:layout_marginLeft="@dimen/px_12"
            android:src="@drawable/user_return_icon"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerInParent="true"
            android:textColor="@color/cl_333333"
            android:textStyle="normal"
            android:text="@string/register"
            android:textSize="@dimen/px_36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/cl_f5f5f5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:textCursorDrawable="@drawable/edit_cursor"
        android:maxLength="11"
        android:singleLine="true"
        android:inputType="phone|number"
        android:paddingLeft="@dimen/px_32"
        android:id="@+id/sr_number"
        android:layout_marginTop="@dimen/px_30"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:textSize="@dimen/px_30"
        android:hint="@string/enter_phone_number"
        android:textColor="@color/cl_333333"
        android:textColorHint="@color/cl_b3b3b3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_80" />

    <RelativeLayout
        android:layout_marginTop="@dimen/px_30"
        android:layout_marginLeft="@dimen/px_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:checked="true"
            android:id="@+id/select"
            android:button="@null"
            android:background="@drawable/checkbox_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/px_20"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/select"
            android:id="@+id/nin"
            android:textSize="@dimen/px_26"
            android:textColor="@color/cl_666666"
            android:text="@string/you_have_read_and_agreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/nin"
            android:textSize="@dimen/px_26"
            android:textColor="@color/cl_6fd1c8"
            android:text="@string/user_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px_150"
        android:layout_below="@+id/region"
        android:text="@string/next_step"
        android:textSize="@dimen/px_32"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/is_forbidden"
        android:id="@+id/btn_next_step"
        android:layout_width="@dimen/px_280"
        android:layout_height="@dimen/px_80" />

    </LinearLayout>
</LinearLayout>
