<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_80">
        <include layout="@layout/line_layout" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:id="@+id/no_shopping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/cl_999999"
                android:text="@string/zero"
                android:layout_marginLeft="@dimen/px_130"
                android:textSize="@dimen/px_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="@dimen/px_7"
                android:textColor="@color/cl_999999"
                android:text="@string/delivery_fee_zero"
                android:layout_marginLeft="@dimen/px_130"
                android:textSize="@dimen/px_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/go_accounts"
            android:text="@string/go_accounts"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/cl_fbac00"
            android:textSize="@dimen/px_28"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/px_160"
            android:layout_height="@dimen/px_80" />
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/cl_e3e3e3" />
    </RelativeLayout>
</RelativeLayout>